# fastapi_project_setup

.github/worflows/: test.yml
services/todo_api/: pyproject.toml
